# h-ppo

./: .gitignore  README.md  config.py  config_eval.py  doorkey.py  doorkey_helpers.py  h_ppo_eval.py  h_ppo_product.py  h_ppo_symloss.py  h_ppo_symloss_eps.py  ppo.py  ppo_eval.py  ppo_eval_random_rules.py  pyproject.toml  requirements.txt  run_5_seeds.sh  run_5_seeds_eval.sh
aggregate_evals/: plot_results.py
eval/: aggregate_eval.py  config_eval.py  ppo_eval_random_rules.py  run_5_seeds_eval.sh
gym-subgoal-automata/: .gitignore  README.md  aggregate_eval.py  config.py  config_eval.py  h_ppo_PSM.py  h_ppo_eval.py  h_ppo_product.py  h_ppo_symloss.py  h_ppo_symloss_eps.py  h_ppo_symloss_theta.py  ppo.py  ppo_eval.py  ppo_eval_check_values_old.py  ppo_eval_random_rules.py  ppo_reward_machine.py  pyproject.toml  run_5_seeds_eval.sh  seeds.txt
gym-subgoal-automata/aggregate_evals/: plot_results.py
minigrid/: .gitignore  README.md  aggregate_eval.py  config.py  config_eval.py  doorkey.py  doorkey_helpers.py  h_ppo_PSM.py  h_ppo_PSM_netembed.py  h_ppo_eval.py  h_ppo_kdloss.py  h_ppo_kdloss_full.py  h_ppo_product.py  h_ppo_sym_kd.py  h_ppo_sym_kl_loss.py  h_ppo_symloss.py  h_ppo_symloss_eps.py  h_ppo_symloss_theta.py  ppo.py  ppo_eval.py  ppo_eval_check_values.py  ppo_reward_machine.py  run_5_seeds.sh  run_5_seeds_eval.sh  seeds.txt
minigrid/aggregate_evals/: plot_results.py
models/h_ppo_product_8x8_1keysTEST/: h_ppo_seed=200.pt  h_ppo_seed=50.pt  h_ppo_seed=70.pt  h_ppo_seed=700.pt  h_ppo_seed=95.pt
models/ppo_8x8_1keysTEST/: ppo_seed=200.pt  ppo_seed=50.pt  (+3 more)
(+4 files in other folders)
